; ModuleID = '/home/carl/AnghaBench/netdata/collectors/apps.plugin/extr_apps_plugin.c_compar_pid.c'
source_filename = "/home/carl/AnghaBench/netdata/collectors/apps.plugin/extr_apps_plugin.c_compar_pid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pid_stat = type { i64 }

@all_pids = common dso_local global %struct.pid_stat** null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @compar_pid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @compar_pid(i8* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.pid_stat*, align 8
  %7 = alloca %struct.pid_stat*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  %8 = load %struct.pid_stat**, %struct.pid_stat*** @all_pids, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = bitcast i8* %9 to i64*
  %11 = load i64, i64* %10, align 8
  %12 = getelementptr inbounds %struct.pid_stat*, %struct.pid_stat** %8, i64 %11
  %13 = load %struct.pid_stat*, %struct.pid_stat** %12, align 8
  store %struct.pid_stat* %13, %struct.pid_stat** %6, align 8
  %14 = load %struct.pid_stat**, %struct.pid_stat*** @all_pids, align 8
  %15 = load i8*, i8** %5, align 8
  %16 = bitcast i8* %15 to i64*
  %17 = load i64, i64* %16, align 8
  %18 = getelementptr inbounds %struct.pid_stat*, %struct.pid_stat** %14, i64 %17
  %19 = load %struct.pid_stat*, %struct.pid_stat** %18, align 8
  store %struct.pid_stat* %19, %struct.pid_stat** %7, align 8
  %20 = load %struct.pid_stat*, %struct.pid_stat** %6, align 8
  %21 = getelementptr inbounds %struct.pid_stat, %struct.pid_stat* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = load %struct.pid_stat*, %struct.pid_stat** %7, align 8
  %24 = getelementptr inbounds %struct.pid_stat, %struct.pid_stat* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = icmp sgt i64 %22, %25
  br i1 %26, label %27, label %28

27:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %29

28:                                               ; preds = %2
  store i32 1, i32* %3, align 4
  br label %29

29:                                               ; preds = %28, %27
  %30 = load i32, i32* %3, align 4
  ret i32 %30
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
